--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,5 @@
 <!-- views/partials/nav.ejs -->
+<script src="/js/nav-scramble.js"></script>
 <nav class="nav">
   <% if (!currentUser) { %>
   <a href="/auth/login">Log in</a>
