--- a/views/new.ejs
+++ b/views/new.ejs
@@ -128,8 +128,10 @@
       <div class="desc-modal-content">
   <label for="desc-modal-textarea">Edit Description</label>
   <textarea id="desc-modal-textarea" rows="10"></textarea>
-        <button type="button" class="save-btn" id="saveDescModal">Save</button>
-        <button type="button" class="cancel-btn" id="cancelDescModal">Cancel</button>
+  <div class="description-modal-buttons">
+    <button type="button" class="save-btn" id="saveDescModal">Save</button>
+    <button type="button" class="cancel-btn" id="cancelDescModal">Cancel</button>
+  </div>
       </div>
     </div>
       <section class="new-right">
@@ -226,5 +228,5 @@
     <script src="/js/description-modal.js"></script>
   </body>
 </html>
-ody>
+
 </html>
