--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,8 +7,9 @@
 }
 
 .page-index-2 {
-  margin-top: 2vh;
-  margin: 8px auto;
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 32px 24px 40px 24px;
   max-width: 1000px;
   line-height: 1;
